service/rfid_pn532/nfc-nim/nfc.nim


##  Reset struct alignment to default

##  Library initialization/deinitialization

proc init*(context: ptr ptr context) {.cdecl, importc: "nfc_init", dynlib: nfcLib.}
proc exit*(context: ptr context) {.cdecl, importc: "nfc_exit", dynlib: nfcLib.}
proc register_driver*(driver: ptr driver): cint {.cdecl,
    importc: "nfc_register_driver", dynlib: nfcLib.}
##  NFC Device/Hardware manipulation

proc open*(context: ptr context; connstring: connstring): ptr device {.cdecl,
    importc: "nfc_open", dynlib: nfcLib.}
proc close*(pnd: ptr device) {.cdecl, importc: "nfc_close", dynlib: nfcLib.}
proc abort_command*(pnd: ptr device): cint {.cdecl, importc: "nfc_abort_command",
                                        dynlib: nfcLib.}
proc list_devices*(context: ptr context; connstrings: ptr connstring;
                  connstrings_len: csize): csize {.cdecl,
    importc: "nfc_list_devices", dynlib: nfcLib.}
proc idle*(pnd: ptr device): cint {.cdecl, importc: "nfc_idle", dynlib: nfcLib.}
##  NFC initiator: act as "reader"

proc initiator_init*(pnd: ptr device): cint {.cdecl, importc: "nfc_initiator_init",
    dynlib: nfcLib.}
proc initiator_init_secure_element*(pnd: ptr device): cint {.cdecl,
    importc: "nfc_initiator_init_secure_element", dynlib: nfcLib.}
proc initiator_select_passive_target*(pnd: ptr device; nm: modulation;
                                     pbtInitData: ptr uint8; szInitData: csize;
                                     pnt: ptr target): cint {.cdecl,
    importc: "nfc_initiator_select_passive_target", dynlib: nfcLib.}
proc initiator_list_passive_targets*(pnd: ptr device; nm: modulation; ant: ptr target;
                                    szTargets: csize): cint {.cdecl,
    importc: "nfc_initiator_list_passive_targets", dynlib: nfcLib.}
proc initiator_poll_target*(pnd: ptr device; pnmTargetTypes: ptr modulation;
                           szTargetTypes: csize; uiPollNr: uint8; uiPeriod: uint8;
                           pnt: ptr target): cint {.cdecl,
    importc: "nfc_initiator_poll_target", dynlib: nfcLib.}
proc initiator_select_dep_target*(pnd: ptr device; ndm: dep_mode; nbr: baud_rate;
                                 pndiInitiator: ptr dep_info; pnt: ptr target;
                                 timeout: cint): cint {.cdecl,
    importc: "nfc_initiator_select_dep_target", dynlib: nfcLib.}
proc initiator_poll_dep_target*(pnd: ptr device; ndm: dep_mode; nbr: baud_rate;
                               pndiInitiator: ptr dep_info; pnt: ptr target;
                               timeout: cint): cint {.cdecl,
    importc: "nfc_initiator_poll_dep_target", dynlib: nfcLib.}
proc initiator_deselect_target*(pnd: ptr device): cint {.cdecl,
    importc: "nfc_initiator_deselect_target", dynlib: nfcLib.}
proc initiator_transceive_bytes*(pnd: ptr device; pbtTx: ptr uint8; szTx: csize;
                                pbtRx: ptr uint8; szRx: csize; timeout: cint): cint {.
    cdecl, importc: "nfc_initiator_transceive_bytes", dynlib: nfcLib.}
proc initiator_transceive_bits*(pnd: ptr device; pbtTx: ptr uint8; szTxBits: csize;
                               pbtTxPar: ptr uint8; pbtRx: ptr uint8; szRx: csize;
                               pbtRxPar: ptr uint8): cint {.cdecl,
    importc: "nfc_initiator_transceive_bits", dynlib: nfcLib.}
proc initiator_transceive_bytes_timed*(pnd: ptr device; pbtTx: ptr uint8; szTx: csize;
                                      pbtRx: ptr uint8; szRx: csize;
                                      cycles: ptr uint32): cint {.cdecl,
    importc: "nfc_initiator_transceive_bytes_timed", dynlib: nfcLib.}
proc initiator_transceive_bits_timed*(pnd: ptr device; pbtTx: ptr uint8;
                                     szTxBits: csize; pbtTxPar: ptr uint8;
                                     pbtRx: ptr uint8; szRx: csize;
                                     pbtRxPar: ptr uint8; cycles: ptr uint32): cint {.
    cdecl, importc: "nfc_initiator_transceive_bits_timed", dynlib: nfcLib.}
proc initiator_target_is_present*(pnd: ptr device; pnt: ptr target): cint {.cdecl,
    importc: "nfc_initiator_target_is_present", dynlib: nfcLib.}
##  NFC target: act as tag (i.e. MIFARE Classic) or NFC target device.

proc target_init*(pnd: ptr device; pnt: ptr target; pbtRx: ptr uint8; szRx: csize;
                 timeout: cint): cint {.cdecl, importc: "nfc_target_init",
                                     dynlib: nfcLib.}
proc target_send_bytes*(pnd: ptr device; pbtTx: ptr uint8; szTx: csize; timeout: cint): cint {.
    cdecl, importc: "nfc_target_send_bytes", dynlib: nfcLib.}
proc target_receive_bytes*(pnd: ptr device; pbtRx: ptr uint8; szRx: csize; timeout: cint): cint {.
    cdecl, importc: "nfc_target_receive_bytes", dynlib: nfcLib.}
proc target_send_bits*(pnd: ptr device; pbtTx: ptr uint8; szTxBits: csize;
                      pbtTxPar: ptr uint8): cint {.cdecl,
    importc: "nfc_target_send_bits", dynlib: nfcLib.}
proc target_receive_bits*(pnd: ptr device; pbtRx: ptr uint8; szRx: csize;
                         pbtRxPar: ptr uint8): cint {.cdecl,
    importc: "nfc_target_receive_bits", dynlib: nfcLib.}
##  Error reporting

proc strerror*(pnd: ptr device): cstring {.cdecl, importc: "nfc_strerror",
                                      dynlib: nfcLib.}
proc strerror_r*(pnd: ptr device; buf: cstring; buflen: csize): cint {.cdecl,
    importc: "nfc_strerror_r", dynlib: nfcLib.}
proc perror*(pnd: ptr device; s: cstring) {.cdecl, importc: "nfc_perror", dynlib: nfcLib.}
proc device_get_last_error*(pnd: ptr device): cint {.cdecl,
    importc: "nfc_device_get_last_error", dynlib: nfcLib.}
##  Special data accessors

proc device_get_name*(pnd: ptr device): cstring {.cdecl,
    importc: "nfc_device_get_name", dynlib: nfcLib.}
proc device_get_connstring*(pnd: ptr device): cstring {.cdecl,
    importc: "nfc_device_get_connstring", dynlib: nfcLib.}
proc device_get_supported_modulation*(pnd: ptr device; mode: mode;
                                     supported_mt: ptr ptr modulation_type): cint {.
    cdecl, importc: "nfc_device_get_supported_modulation", dynlib: nfcLib.}
proc device_get_supported_baud_rate*(pnd: ptr device; nmt: modulation_type;
                                    supported_br: ptr ptr baud_rate): cint {.cdecl,
    importc: "nfc_device_get_supported_baud_rate", dynlib: nfcLib.}
##  Properties accessors

proc device_set_property_int*(pnd: ptr device; property: property; value: cint): cint {.
    cdecl, importc: "nfc_device_set_property_int", dynlib: nfcLib.}
proc device_set_property_bool*(pnd: ptr device; property: property; bEnable: bool): cint {.
    cdecl, importc: "nfc_device_set_property_bool", dynlib: nfcLib.}
##  Misc. functions

proc iso14443a_crc*(pbtData: ptr uint8; szLen: csize; pbtCrc: ptr uint8) {.cdecl,
    importc: "iso14443a_crc", dynlib: nfcLib.}
proc iso14443a_crc_append*(pbtData: ptr uint8; szLen: csize) {.cdecl,
    importc: "iso14443a_crc_append", dynlib: nfcLib.}
proc iso14443b_crc*(pbtData: ptr uint8; szLen: csize; pbtCrc: ptr uint8) {.cdecl,
    importc: "iso14443b_crc", dynlib: nfcLib.}
proc iso14443b_crc_append*(pbtData: ptr uint8; szLen: csize) {.cdecl,
    importc: "iso14443b_crc_append", dynlib: nfcLib.}
proc iso14443a_locate_historical_bytes*(pbtAts: ptr uint8; szAts: csize;
                                       pszTk: ptr csize): ptr uint8 {.cdecl,
    importc: "iso14443a_locate_historical_bytes", dynlib: nfcLib.}
proc free*(p: pointer) {.cdecl, importc: "nfc_free", dynlib: nfcLib.}
proc version*(): cstring {.cdecl, importc: "nfc_version", dynlib: nfcLib.}
proc device_get_information_about*(pnd: ptr device; buf: cstringArray): cint {.cdecl,
    importc: "nfc_device_get_information_about", dynlib: nfcLib.}
##  String converter functions

proc str_nfc_modulation_type*(nmt: modulation_type): cstring {.cdecl,
    importc: "str_nfc_modulation_type", dynlib: nfcLib.}
proc str_nfc_baud_rate*(nbr: baud_rate): cstring {.cdecl,
    importc: "str_nfc_baud_rate", dynlib: nfcLib.}
proc str_nfc_target*(buf: cstringArray; pnt: ptr target; verbose: bool): cint {.cdecl,
    importc: "str_nfc_target", dynlib: nfcLib.}
##  Error codes
## * @ingroup error
##  @hideinitializer
##  Success (no error)
##

const
  NFC_SUCCESS* = 0

## * @ingroup error
##  @hideinitializer
##  Input / output error, device may not be usable anymore without re-open it
##

const
  NFC_EIO* = -1

## * @ingroup error
##  @hideinitializer
##  Invalid argument(s)
##

const
  NFC_EINVARG* = -2

## * @ingroup error
##  @hideinitializer
##   Operation not supported by device
##

const
  NFC_EDEVNOTSUPP* = -3

## * @ingroup error
##  @hideinitializer
##  No such device
##

const
  NFC_ENOTSUCHDEV* = -4

## * @ingroup error
##  @hideinitializer
##  Buffer overflow
##

const
  NFC_EOVFLOW* = -5

## * @ingroup error
##  @hideinitializer
##  Operation timed out
##

const
  NFC_ETIMEOUT* = -6

## * @ingroup error
##  @hideinitializer
##  Operation aborted (by user)
##

const
  NFC_EOPABORTED* = -7

## * @ingroup error
##  @hideinitializer
##  Not (yet) implemented
##

const
  NFC_ENOTIMPL* = -8

## * @ingroup error
##  @hideinitializer
##  Target released
##

const
  NFC_ETGRELEASED* = -10

## * @ingroup error
##  @hideinitializer
##  Error while RF transmission
##

const
  NFC_ERFTRANS* = -20

## * @ingroup error
##  @hideinitializer
##  MIFARE Classic: authentication failed
##

const
  NFC_EMFCAUTHFAIL* = -30

## * @ingroup error
##  @hideinitializer
##  Software error (allocation, file/pipe creation, etc.)
##

const
  NFC_ESOFT* = -80

## * @ingroup error
##  @hideinitializer
##  Device's internal chip error
##

const
  NFC_ECHIP* = -90
